--- a/Frontend/rates-app/package.json
+++ b/Frontend/rates-app/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.58.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3"
   },
